syntax = "proto3";

option java_multiple_files = true;
option java_package = "uschi2000.benchmark";
option java_outer_classname = "BenchmarkProto";
option objc_class_prefix = "BM";

package uschi2000.benchmark;

service Benchmark {
  rpc Query (BenchmarkRequest) returns (BenchmarkReply) {}
}

message BenchmarkRequest {
  int32 numStrings = 1;
  int32 numInts = 2;
  string prefix = 3;
}

message BenchmarkReply {
  repeated string strings = 1;
  repeated int32 ints = 2;
  string myAuthHeader = 3;
}
